# dbsurveyor

./: .actrc  .checkov.yml  .coderabbit.yaml  .cspell.json  .editorconfig  .editorconfig-checker.json  .gitattributes  .gitignore  .gitleaks.toml  .goodcheck.yml  .goreleaser.yaml  .grype.yaml  .markdownlint-cli2.jsonc  .markdownlint.json  .markdownlint.yaml  .mdformat.toml  .mega-linter.yml  .mergify.yml  .pre-commit-config.yaml  .prettierignore  .prettierrc  .prettierrc.json  .secretlintrc.json  .secrets.template  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTORS.md  Cargo.toml  GOTCHAS.md  LICENSE  PLAN.md  README.md  RELEASE.md  SECURITY.md  SECURITY_VERIFICATION.md  TASK_2.8_COMPLETION_SUMMARY.md  audit.toml  cargo-deny.toml  cargo-dist.toml  (+8 more)
.cargo/: audit.toml
.config/: nextest.toml
.cursor/rules/: README.md
.cursor/rules/ai-assistant/: development-workflow.mdc  (+1 more)
.devcontainer/: devcontainer.json
.gemini/: settings.json
.github/: CODEOWNERS  COPILOT_DISABLE.md  FUNDING.yml  actionlint.yaml  copilot-instructions.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  documentation_request.md  feature_request.md  security_report.md
.github/workflows/: audit.yml  ci-local.yml  ci.yml  copilot-setup-steps.yml  docs.yml  release-please.yml  release.yml  scorecard.yml  security.yml
.kiro/hooks/: ai-instructions-sync.kiro.hook  code-quality-analyzer.kiro.hook  format-on-save.kiro.hook  manual-ci-check.kiro.hook  rust-docs-sync.kiro.hook  rust-test-coverage.kiro.hook  rust-test-monitor.kiro.hook  security-review-hook.kiro.hook
.kiro/steering/: architecture-patterns.md  commit-standards.md  development-workflow.md  documentation-standards.md  product.md  quality-standards.md  rust-development.md  security-standards.md  structure.md  tech.md  testing-standards.md
.serena/: project.yml
crates/shared/: Cargo.toml
crates/shared/src/: lib.rs
dbsurveyor/: Cargo.toml
dbsurveyor-collect/: Cargo.toml
dbsurveyor-collect/src/: collect.rs  lib.rs  main.rs  multi_db.rs  outcome.rs  output.rs  sampling.rs
dbsurveyor-collect/src/adapters/: README.md  mod.rs  mongodb.rs  mysql.rs  oracle.rs  postgresql.rs  sqlite.rs  sqlserver.rs
dbsurveyor-collect/tests/: cli_e2e.rs  connection_pooling_tests.rs  integration_tests.rs  security_tests.rs
dbsurveyor-collect/wix/: main.wxs
dbsurveyor-core/: Cargo.toml
dbsurveyor-core/benches/: benchmarks.rs
dbsurveyor-core/schemas/: dbsurveyor-schema-v1.0.json
dbsurveyor-core/src/: adapters.rs  error.rs  lib.rs  logging.rs  models.rs  models_tests.rs  security.rs  validation.rs
dbsurveyor-core/src/adapters/: helpers.rs  mod.rs  mongodb.rs  mssql.rs  mysql.rs  placeholder.rs  postgres.rs  sqlite.rs
dbsurveyor-core/src/adapters/config/: collection.rs  connection.rs  mod.rs  multi_database.rs  sampling.rs
dbsurveyor-core/src/adapters/mongodb/: connection.rs  enumeration.rs  mod.rs  sampling.rs  schema_inference.rs  tests.rs  type_mapping.rs
dbsurveyor-core/src/adapters/mysql/: connection.rs  mod.rs  sampling.rs  schema_collection.rs  tests.rs  type_mapping.rs
dbsurveyor-core/src/adapters/postgres/: batch_collection.rs  connection.rs  enumeration.rs  mod.rs  multi_database.rs  routines.rs  row_ext.rs  sampling.rs  schema_collection.rs  tests.rs  triggers.rs  type_mapping.rs  views.rs
dbsurveyor-core/src/adapters/sqlite/: connection.rs  mod.rs  sampling.rs  schema_collection.rs  tests.rs  type_mapping.rs
dbsurveyor-core/src/quality/: analyzer.rs  anomaly.rs  completeness.rs  config.rs  consistency.rs  mod.rs  models.rs  uniqueness.rs
dbsurveyor-core/src/security/: connection.rs  credentials.rs  encryption.rs  mod.rs
dbsurveyor-core/src/validation/: tests.rs
dbsurveyor-core/tests/: encryption_integration.rs  mongodb_basic.rs  mongodb_sampling.rs  mongodb_schema_collection.rs  mysql_basic.rs  mysql_sampling.rs  mysql_schema_collection.rs  postgres_basic.rs  postgres_comprehensive.rs  postgres_connection_pooling.rs  postgres_multi_database.rs  postgres_read_only.rs  postgres_sampling.rs  postgres_schema_enumeration.rs  postgres_unit.rs  postgres_versions_and_configs.rs  postgres_views_routines_triggers.rs  sqlite_read_only.rs  sqlite_sampling.rs  sqlite_schema_collection.rs
dbsurveyor-core/tests/common/: mod.rs
dbsurveyor/src/: main.rs  output.rs  schema.rs
dbsurveyor/src/redaction/: mod.rs
dbsurveyor/tests/: cli_e2e.rs  postprocessor_tests.rs
dbsurveyor/wix/: main.wxs
docs/: book.toml  go-port-migration-strategy.md  nextest.md
docs/adr/: 0001-go-port-repo-layout-and-versioning.md
docs/plans/: 2026-01-27-postgresql-advanced-features.md
docs/src/: SUMMARY.md  architecture.md  chapter_1.md  cli-reference.md  collection.md  configuration.md  contributing.md  database-support.md  documentation.md  installation.md  introduction.md  json-schema-specification.md  output-formats.md  quick-start.md  security.md  testing.md  troubleshooting.md
project_plan/specs/: Core_Flows__DBSurveyor_User_Journeys.md  Epic_Brief__DBSurveyor_—_Database_Schema_Collection_&_Documentation.md  Tech_Plan__DBSurveyor_Implementation_Architecture.md
project_plan/tickets/: 1-Add_SampleStatus_to_TableSample_and_sample_table()_to_DatabaseAdapter_trait.md  10-Bug__Make_PostgreSQL_`schema_name=None`_ordering_detection_search_path-aware.md  2-Implement_SamplingOrchestrator_in_the_collector_binary.md  3-Implement_CollectionOutcome_exit-code_taxonomy_for_multi-database_runs.md  4-Implement_MySQL,_SQLite,_and_MongoDB_adapters_with_sample_table.md  5-Gate_experimental_output_formats_behind_Cargo_feature_flag_in_postprocessor.md  6-Implement_redaction_pipeline_in_the_postprocessor_binary.md  7-Implement_production-complete_Markdown_generation_via_Askama_templates.md  8-Core_test_infrastructure__security_tests,_CI_database_matrix,_and_coverage_threshold.md  9-Bug__Return_`SampleStatus__Skipped`_from_placeholder_adapter_`sample_table()`.md
project_specs/: TASK-003-technical-spec.md  TASK-004-data-quality-metrics.md  requirements.md  tasks.md  user_stories.md
scripts/: generate-sbom-metadata.sh
(+33 files in other folders)
