[package]
name = "dbsurveyor-collect"
description = "Database metadata collector for dbsurveyor toolchain"
categories = ["database", "command-line-utilities"]
keywords = ["database", "schema", "metadata", "red-team", "security"]

version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[package.metadata.wix]
upgrade-guid = "15648278-7BA0-47EA-AE62-485C88FAFA5A"
path-guid = "9E7F2FC6-51F1-4618-A43D-653A5DA9CB20"
license = false
eula = false

[[bin]]
name = "dbsurveyor-collect"
path = "src/main.rs"

[dependencies]
# Core shared library
dbsurveyor-core = { workspace = true }

# CLI and async
clap = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
async-trait = "0.1.89"

# URL parsing for secure database connection handling
url = "2.5.7"

# Database drivers (feature-gated)
# SQLx with minimal features - specific database support added via feature flags only
# Using rustls for better security and cross-platform compatibility
sqlx = { version = "0.8.6", features = [
    "runtime-tokio-rustls",
], optional = true }
mongodb = { version = "3.2.5", optional = true }
tiberius = { version = "0.12.3", optional = true }
tokio-util = { version = "0.7.16", features = ["compat"], optional = true }
futures = "0.3"


[dev-dependencies]
tempfile = "3.21.0"
temp-env = "0.3.6"
testcontainers-modules = { version = "0.13.0", features = ["postgres", "mongo"] }
criterion = "0.7.0"
proptest = "1.7.0"

[features]
# Default features include the most commonly used secure database drivers
default = ["postgresql", "sqlite", "mongodb"]
postgresql = ["dep:sqlx", "sqlx/postgres"]
mysql = ["dep:sqlx", "sqlx/mysql"]
sqlite = ["dep:sqlx", "sqlx/sqlite"]
mssql = ["dep:tiberius", "tokio-util"]
oracle = []  # Oracle adapter is a stub - requires Oracle Instant Client
mongodb = ["dep:mongodb"]

[lints]
workspace = true
