[package]
name = "dbsurveyor"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Database schema documentation and analysis tool"

[package.metadata.wix]
upgrade-guid = "49E4D9FD-4303-4783-9AB7-8CE03406AD32"
path-guid = "CF033D41-08C9-41CE-9264-31B5A792C7AC"
license = false
eula = false

[[bin]]
name = "dbsurveyor"
path = "src/main.rs"

[features]
default = []
# Optional features
compression = ["dbsurveyor-core/compression", "dep:zstd"]
encryption = ["dbsurveyor-core/encryption"]

[dependencies]
# Core dependencies
dbsurveyor-core = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }

# Template engine
askama = { workspace = true }

# Security dependencies (for password input)
rpassword = { workspace = true }

# Optional dependencies
zstd = { workspace = true, optional = true }

[dev-dependencies]
# No additional dev dependencies needed for now

# Nextest configuration for postprocessor crate
[package.metadata.nextest]
# Template and output generation tests
[[package.metadata.nextest.overrides]]
filter = "test(template) or test(output) or test(generation)"
test-group = "unit"

# Security tests run sequentially
[[package.metadata.nextest.overrides]]
filter = "test(security) or test(credential) or test(encryption)"
test-group = "security"

# Integration tests with file I/O
[[package.metadata.nextest.overrides]]
filter = "test(integration) or test(file)"
test-group = "integration"
