[package]
name = "dbsurveyor"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Database schema documentation and analysis tool"

[[bin]]
name = "dbsurveyor"
path = "src/main.rs"

[features]
default = []
# Optional features
compression = ["dbsurveyor-core/compression", "dep:zstd"]
encryption = ["dbsurveyor-core/encryption"]

[dependencies]
# Core dependencies
dbsurveyor-core = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
clap_complete = { workspace = true }
indicatif = { workspace = true }
tracing = { workspace = true }
serde_json = { workspace = true }

# Security dependencies (for password input)
rpassword = { workspace = true }

# Optional dependencies
zstd = { workspace = true, optional = true }

[dev-dependencies]
# No additional dev dependencies needed for now
