[package]
name = "dbsurveyor-shared"
description = "Shared data structures and types for the dbsurveyor toolchain"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
# Core serialization and error handling
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }

# Time handling for timestamps
chrono = { version = "0.4", features = ["serde"] }

# Additional shared dependencies will be added as needed
# For schema definitions, encryption types, etc.

[lints]
workspace = true
